# CornerVINS

./: CMakeLists.txt  README.md  run_cid.sh
app/: CMakeLists.txt  test_cid.cpp
config/: cid.yaml
include/: dataset_reader.h  parameters.h  quat_utils.h  static_initializer.h  vio_system.h  visualizer.h
include/data_types/: basic_type.h  corner.h  imu.h  jpl_quat.h  landmark.h  pose_jpl.h  vec.h
include/ekf/: propagator.h  state.h  state_utils.h  update_msckf_feature.h  update_plane.h  update_slam_feature.h  update_utility.h  update_zupt.h
include/initial/: feature_manager.h  global_sfm.h  initial_utility.h  integration_base.h  motion_estimator.h  motion_initializer.h  visual_imu_alignment.h
include/initial/factor/: imu_factor.h  pose_local_parameterization.h  projection_factor.h
include/peac/: AHCParamSet.hpp  AHCPlaneFitter.hpp
include/plane_features/: feature_associator.h  plane_detector.h  plane_feature.h  plane_graph.h  plane_graph_tracker.h  utils.h
include/plane_features/FGM/: fgm.hpp  hungarian.hpp
include/point_features/: point_detector.h  point_feature.h  point_feature_database.h  point_klt_tracker.h  point_triangulation.h
src/: CMakeLists.txt  parameters.cpp
src/data_types/: corner.cpp  landmark.cpp
src/ekf/: update_plane.cpp
src/plane_features/: feature_associator.cpp  plane_detector.cpp  utils.cpp
